# SoftServeCustomPythonPackage

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  conanfile.py  setup.py
lib/: CMakeLists.txt
lib/inc/: custom_binding.h
lib/src/: custom_binding.c
recipe/: build.sh  meta.yaml
src/soft_serve_custom_python_package/: __init__.py
